\name{NEWS}
\title{NEWS file for the \pkg{Uniquorn} bioconductor package }
\section{Changes in version 1.1.2 [2016-28-11]}{
    \subsection{Change of penalty function}{
        \itemize{
            \item The function that measures random background-noise matches and calculates a threshold above the background strength has been updated to be more strict.
        }
    }
}
\section{Changes in version 1.1.1 [2016-10-18]}{
    \subsection{Change of default inclusion threshold}{
        \itemize{
            \item the new default inclusion weight has been set to 0.5 to optimally fit the new probabilistic model of version 1.0.9.
        }
    }
}
\section{Changes in version 1.0.9 [2016-10-11]}{
    \subsection{Re-engineering of probabilistic model}{
        \itemize{
            \item The likelihood to observe a mutation/ variant in a query that matches a reference CCL's variant has been changed. The likelihood was 1 / #all variants in library and is now set to # number of variants in reference CCL / #all variants in library
        }
    }
}
\section{Changes in version 1.0.8 [2016-06-17]}{
    \subsection{Optimization confidence score}{
        \itemize{
            \item Fixed the installation of the package
        }
    }
}
\section{Changes in version 1.0.7 [2016-06-13]}{
    \subsection{Optimization confidence score}{
        \itemize{
            \item Optimized the way confidence scores are calculated to increase the sensitivity and specificity of the method 
        }
    }
}
\section{Changes in version 1.0.6 [2016-06-05]}{
    \subsection{Optimization of default confidence score}{
        \itemize{
            \item Adjusted default confidence score to optimal threshold 
        }
    }
}
\section{Changes in version 1.0.5 [2016-05-30]}{
    \subsection{Minor Bugfixes}{
        \itemize{
            \item Fixed errors connected to adding CLs
        }
    }
}
\section{Changes in version 1.0.4 [2016-05-27]}{
    \subsection{Introduction of confidence score}{